# GraphingGradients

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/engine/: Engine.cpp  Engine.hpp
src/engine/debugging/: Logger.hpp
src/engine/device/: Device.cpp  Device.hpp
src/engine/graphics/: Batch.cpp  Batch.hpp  Drawable.cpp  Drawable.hpp
src/engine/rendering/: FrameInfo.hpp  Pipeline.cpp  Pipeline.hpp  Renderer.cpp  Renderer.hpp  SwapChain.cpp  SwapChain.hpp
src/engine/rendering/render systems/: BaseRenderSystem.cpp  BaseRenderSystem.hpp  LineRenderSystem.cpp  LineRenderSystem.hpp  TriangleRenderSystem.cpp  TriangleRenderSystem.hpp  VertexRenderSystem.cpp  VertexRenderSystem.hpp
src/engine/rendering/shaders/: SimpleRenderSystemShader.hpp
src/engine/utilities/: Buffer.cpp  Buffer.hpp  FpsDisplay.cpp  FpsDisplay.hpp  HashCombine.cpp  HashCombine.hpp  TimeManagment.cpp  TimeManagment.hpp
src/engine/utilities/descriptors/: DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  DescriptorWriter.cpp  DescriptorWriter.hpp
src/engine/window/: Window.cpp  Window.hpp
src/framework/: Framework.cpp  Framework.hpp  GradientLines.cpp  GradientLines.hpp  Line.cpp  Line.hpp
